# crabwalk

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  LICENSE  MANIFEST.in  README.md  noxfile.py  prettier.config.mjs  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.yml  main.yml  publish.yml
docs/: api-reference.rst  conf.py  index.md  overview.md  requirements.txt  use_text_signature.py
docs/_static/: custom.css
src/crabwalk/: __init__.py  _lib.pyi  _types.py
src/rust/: Cargo.toml
src/rust/src/: direntry.rs  error.rs  lib.rs  types.rs  util.rs
tests/: conftest.py  test_errors.py  test_types.py  test_walk.py  tree.py
