[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "crabwalk"
version = "0.1"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []
authors = [
    { name = "Frazer McLean", email = "frazer@frazermclean.co.uk" }
]

[dependency-groups]
dev = [
    { include-group = "coverage" },
    "pytest>=8.3.3",
    "typing-extensions>=4.12.2; python_version<'3.10'",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
]
docstest = [
    { include-group = "docs" },
    "doc8>=1.1.2",
]
typing = [
    "mypy>=1.13.0",
]
coverage = [
    "coverage[toml]>=7.6.5",
]
nox = [
    "nox>=2024.10.9",
]

[tool.maturin]
python-source = "src"
python-packages = ["crabwalk"]
manifest-path = "src/rust/Cargo.toml"
module-name = "crabwalk._lib"
locked = true
sdist-generator = "git"
features = ["pyo3/abi3-py39"]

[tool.isort]
profile = "black"
known_first_party = ["crabwalk"]

[tool.doc8]
ignore-path = "docs/_build/"

[tool.mypy]
check_untyped_defs = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
    """tree(*children, chdir=False): Configure the tree_path fixture to create \
    this directory structure.\
    """,
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["crabwalk", "tests/"]
parallel = true

[tool.coverage.paths]
crabwalk = [
    "src/crabwalk",
    "*.nox/*/lib*/python*/site-packages/crabwalk",
    "*.nox\\*\\Lib\\site-packages\\crabwalk",
]
tests = [
    "tests/",
    "tests\\",
]

[tool.uv]
# Lock latest versions for each Python version
environments = [
    "python_version>='3.13'",
    "python_version=='3.12'",
    "python_version=='3.11'",
    "python_version=='3.10'",
    "python_version=='3.9'",
]
