[package]
name = "crabwalk-rust"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ignore = "0.4"
lazy_static = "1.1"
pyo3 = { workspace = true }
regex = "1.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "crabwalk_rust"
crate-type = ["cdylib"]
